--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ h6 {
     grid-area: nav-wrapper;
     border-bottom: 1px solid var(--borderColor);
     background-color: var(--mainColor);
-    z-index: 1;
+    z-index: 1
 }
 
 #navigation a {
@@ -467,12 +467,10 @@ h6 {
         width: 80%;
         margin: 32px 20px
     }
-
-
 }
 
 .sticky {
     position: fixed !important;
     top: 0;
-    width: 100%;
+    width: 100%
 }
