--- a/css/style.css
+++ b/css/style.css
@@ -330,14 +330,15 @@ h6 {
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(auto-fit, 320px);
-    padding-bottom: 50px
+    padding-bottom: 50px;
 }
 
 .post {
     border: 1px solid var(--borderColor);
     -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, .75);
     -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, .75);
-    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, .75)
+    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, .75);
+        background: #fff;
 }
 
 .post-preview {
@@ -359,7 +360,7 @@ h6 {
     display: block;
     width: 100%;
     height: 180px;
-    object-fit: cover
+    object-fit: cover;
 }
 
 .more-project {
